# earthlyls

./: Cargo.toml  INSTALL.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
editor/vscode/: README.md  package-lock.json  package.json
editor/vscode/server/: earthlyls-macos-amd64
editor/vscode/src/: extension.ts
src/: backend.rs  bash_parser.rs  cli.rs  commands.rs  descriptions.rs  diagnostic.rs  document.rs  error.rs  lib.rs  main.rs  parser.rs  queries.rs  util.rs
src/commands/: bash_highlight.scm  completion.rs  document_symbol.rs  earthfile_highlight.scm  go_to_definition.rs  goto_definition.rs  hover.rs  references.rs  semantic_tokens.rs  semantic_tokens_full.rs  symbol.rs
src/descriptions/: ADD-not-supported.md  ARG.md  BUILD.md  CACHE.md  CMD-same-as-Dockerfile-CMD.md  COPY.md  DO.md  ENTRYPOINT-same-as-Dockerfile-ENTRYPOINT.md  ENV-same-as-Dockerfile-ENV.md  EXPOSE-same-as-Dockerfile-EXPOSE.md  FOR.md  FROM-DOCKERFILE.md  FROM.md  FUNCTION.md  GIT-CLONE.md  HEALTHCHECK-same-as-Dockerfile-HEALTHCHECK.md  HOST.md  IF.md  IMPORT.md  LABEL-same-as-Dockerfile-LABEL.md  LET.md  LOCALLY.md  ONBUILD-not-supported.md  PIPELINE-deprecated.md  PROJECT.md  RUN.md  SAVE-ARTIFACT.md  SAVE-IMAGE.md  SET.md  SHELL-not-supported.md  STOPSIGNAL-not-supported.md  TRIGGER-deprecated.md  TRY-experimental.md  USER-same-as-Dockerfile-USER.md  VERSION.md  VOLUME-same-as-Dockerfile-VOLUME.md  WAIT.md  WITH-DOCKER.md  WORKDIR-same-as-Dockerfile-WORKDIR.md
src/diagnostic/: deprecated_build_arg.rs  missing_version.rs  syntax_error.rs  unknown_option.rs
tests/: basic.rs  diagnostic.rs  document_symbol.rs  goto_definition.rs  hover.rs  references.rs  semantic_tokens.rs  symbol.rs  test.rs  watched_files.rs
tests/common/: mod.rs
tests/workspace/: Earthfile
tests/workspace/bar/: Earthfile
tests/workspace/foo/: Earthfile
tests/workspace/syntax/: Earthfile
tests/workspace/tokens/: Earthfile
xtask/: Cargo.toml
