[package]
name = "earthlyls"
version = "0.1.2"
edition = "2021"
authors = ["Gaëtan Lehmann <gaetan.lehmann@gmail.com>"]
description = "A fast language server for earthly"
readme = "README.md"
repository = "https://github.com/glehmann/earthlyls.git"
homepage = "https://github.com/glehmann/earthlyls/"
documentation = "https://github.com/glehmann/earthlyls/"
license = "MIT"
keywords = ["earthly", "lsp"]
categories = ["development-tools"]

[dependencies]
clean-path = "0.2.1"
dashmap = "5.5.3"
glob = "0.3.1"
ropey = "1.6.1"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.22.2"
tree-sitter-earthfile = "0.3.0"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
