[package]
name = "earthlyls"
version.workspace = true
edition = "2021"
authors = ["Gaëtan Lehmann <gaetan.lehmann@gmail.com>"]
description = "A fast language server for earthly"
readme = "README.md"
repository = "https://github.com/glehmann/earthlyls.git"
homepage = "https://github.com/glehmann/earthlyls/"
documentation = "https://github.com/glehmann/earthlyls/"
license = "MIT"
keywords = ["earthly", "lsp"]
categories = ["development-tools"]

[workspace]
members = ["xtask"]

[workspace.package]
version = "0.5.2"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
clean-path = "0.2.1"
dashmap = { version = "6.0.1", features = ["rayon"] }
glob = "0.3.1"
glob-match = "0.2.1"
maplit = "1.0.2"
path-slash = "0.2.1"
rayon = "1.10.0"
ropey = "1.6.1"
serde = "1.0.204"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.22.2"
tree-sitter-bash = "0.21.0"
tree-sitter-earthfile = "0.5.4"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
fs_extra = "1.3.0"
serde_json = "1.0.120"
temp-dir = "0.1.13"
