[package]
name = "xtask"
version.workspace = true
edition = "2021"
authors = ["Gaëtan Lehmann <gaetan.lehmann@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive", "env", "wrap_help"] }
toml_edit = "0.24.0"
xshell = "0.2"
