[package]
name = "xtask"
version.workspace = true
edition = "2021"
authors = ["Gaëtan Lehmann <gaetan.lehmann@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env", "wrap_help"] }
toml_edit = "0.25.11"
xshell = "0.2"
